--- a/styles/globals/navbar.css
+++ b/styles/globals/navbar.css
@@ -73,7 +73,8 @@ nav .logo .link a {
     50.25% 49.75%,
     49.75% 50.25%
   );
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   inset: 0;
   width: 100vw;
   pointer-events: none;
