bugFix: fixed the navbar to take over the full height with 100svh

--- a/styles/globals/navbar.css
+++ b/styles/globals/navbar.css
@@ -73,8 +73,7 @@ nav .logo .link a {
     50.25% 49.75%,
     49.75% 50.25%
   );
-  min-height: 100vh;
-  height: 100%;
+  height: 100svh;
   inset: 0;
   width: 100vw;
   pointer-events: none;
