--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@
 html,
 body {
   width: 100vw;
-  height: 100vh;
+  height: -webkit-fill-available;
+  height: 100svh;
   font-family: "Neue Montreal";
 }
 @font-face {
